<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseFamilyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00BCD4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/log_in_family"
            android:textAlignment="center"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <EditText
                android:id="@+id/familyNameJoinET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_of_family"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/familyPasswordJoinET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <Button
                android:id="@+id/joinFamilyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/log_in"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_family"
            android:textAlignment="center"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <EditText
                android:id="@+id/familyNameCreateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_of_new_family"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <Button
                android:id="@+id/createFamilyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>